--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "selectize"
   ],
   "author": "Miguel Andrade <jmandrade0@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/miguelcobain/ember-selectize/issues"
   },
